--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Push通知テスト</title>
+<link rel="manifest" href="manifest.json">
+<script src="push7-worker.js"></script>
+  
 <script src="https://sdk.push7.jp/v2/p7sdk.js"></script>
 <script>
 p7.init("c90f84db5d9241b896295a9cca030361",{
